Lazy loading added

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
         </div>
 
         <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
+        <button type="button" class="next-slide"></button>
+        <button type="button" class="prev-slide"></button>
     </div>
 
-    <!-- <script src="gallery-items.js" type="module"></script> -->
+    
+    <script src="gallery-items.js" type="module"></script>
     <script src="gallery.js" type="module"></script>
 </body>
 
